# neko-dns

./: .gitignore  Cargo.toml  README.md  neko-dns.toml  root.hints
src/: cache.rs  chaos.rs  config.rs  curiosity.rs  edns.rs  journal.rs  journey.rs  main.rs  metrics.rs  negative.rs  neko_comment.rs  prefetch.rs  recursive.rs  trust.rs  ttl_alchemy.rs  upstream.rs
src/dns/: engine.rs  mod.rs  packet.rs  types.rs
src/web/: server.rs
static/: dashboard.html
tests/: benchmark.sh  test_all.sh
